frame/support/test/tests/pallet_ui/call_invalid_origin_type.stderr
error: Invalid type: expected `OriginFor<T>`
  --> $DIR/call_invalid_origin_type.rs:17:18
   |
17 |         fn foo(origin: u8) {}
   |                        ^^

error: expected `OriginFor`
  --> $DIR/call_invalid_origin_type.rs:17:18
   |
17 |         fn foo(origin: u8) {}
   |                        ^^
